--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "1.1.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "aos": "^2.3.4",
-    "bootstrap": "^5.1.3",
-    "sass": "^1.56.0",
-    "react": "^18.0.0",
-    "react-animated-cursor": "^2.3.0",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.6.3",
-    "react-modal": "^3.13.1",
-    "react-router-dom": "^6.0.0",
-    "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
-    "react-tabs": "^3.2.2",
-    "react-transition-group": "^4.4.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.0",
+    "aos": "^3.0.0-beta.6",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-animated-cursor": "^2.4.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.50.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "react-tabs": "^4.1.0",
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.69.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
